--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -27,7 +27,7 @@ layout: page
   {% for post in posts %}
     <li class="post-title">
       <strong>
-        <a href="{{ post.url | prepend: site.baseurl }}" title="{{ post.title }}">{{ post.title }}</a>
+        <a href="{{ post.url | prepend: site.baseurl }}" title="{% if post.html_title %}{{ post.html_title }}{% else %}{{ post.title }}{% endif %}">{{ post.title }}</a>
       </strong>
       <span class="post-date">
         {% case page.lang %}
