--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,6 +56,17 @@ layout: default
 
 <hr class="content-guard">
 
+<section class="rss">
+  <p class="rss-subscribe text">
+    <strong>
+    {% if site.data.i18n['subscribe_via'][page.lang] %}
+      {{ site.data.i18n['subscribe_via'][page.lang] }}
+    {% else %}
+      {{ site.data.i18n['subscribe_via']['default'] }}
+    {% endif %}&nbsp;<a href="/{{ page.lang }}/feed.xml">
+      <i class="fa fa-rss-square fa-lg"></i> RSS</a></strong></p>
+</section>
+
 <section class="share">
   <span>
     {% if site.data.i18n['share'][page.lang] %}
