--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -176,6 +176,9 @@ layout: default
     var disqus_shortname = '{{ site.disqus_shortname }}';
     var disqus_config = function () {
       this.language = "{{ page.lang }}";
+      this.page.identifier = "{{ page.ref }}";
+      this.page.url = "{{ site.url }}{{ site.baseurl }}{{ page.url }}";
+      this.page.title = "{% if page.html_title %}{{ page.html_title }}{% else %}{{ page.title }}{% endif %}";
     };
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
