Support custom excerpt for posts
We might want to control what goes in the excerpt displayed for a post
on the index page, for example to sanitize HTML layouts and customize
length etc.
This patch checks for variable `post.custom_excerpt` for each post in
the post flow and uses that instead of the content if provided.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -39,7 +39,15 @@ ref: index
           </a>
         </h2>
         <section class="post-excerpt" itemprop="description">
-          <p>{{ post.content | strip_html | truncate: 120 }}</p>
+          <p>
+          <p>
+             {% if post.custom_excerpt %}
+               {{ post.custom_excerpt | strip_html }}
+             {% else %}
+               {{ post.content | strip_html | truncate: 120 }}
+             {% endif %}
+           </p>
+          <p>
         </section>
         <section class="post-meta">
           <div class="post-date">
